<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".DashboardFragment">
	
	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:elevation="@dimen/appbar_elevation"
		tools:targetApi="lollipop">
		
		<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?attr/colorPrimary"
			android:minHeight="?attr/actionBarSize"
			android:theme="?attr/actionBarTheme">
			
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="16dp"
					android:text="@string/dashboard_text"
					android:textAppearance="@style/TextAppearance.AppCompat.Large"
					android:textColor="@color/colorWhite"
					android:textStyle="bold" />
				
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:paddingBottom="16dp"
					android:text="@string/dashboard_sub_text"
					android:textAppearance="@style/TextAppearance.AppCompat.Medium"
					android:textColor="@color/colorWhite" />
			</LinearLayout>
		</androidx.appcompat.widget.Toolbar>
	
	</com.google.android.material.appbar.AppBarLayout>
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<androidx.cardview.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="32dp"
			android:background="@color/colorWhite"
			android:elevation="8dp"
			android:orientation="vertical"
			app:cardCornerRadius="10dp"
			tools:targetApi="lollipop">
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="16dp"
				android:orientation="vertical">
				
				<TextView
					android:id="@+id/dbd_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="24dp"
					android:layout_marginBottom="24dp"
					android:drawableStart="@drawable/account_24dp"
					android:drawableLeft="@drawable/account_24dp"
					android:drawablePadding="16dp"
					android:hint="@string/name_text"
					android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
				
				<TextView
					android:id="@+id/dbd_mobile"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="24dp"
					android:layout_marginBottom="24dp"
					android:drawableStart="@drawable/phone_24dp"
					android:drawableLeft="@drawable/phone_24dp"
					android:drawablePadding="16dp"
					android:hint="@string/mobile_text"
					android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
				
				<TextView
					android:id="@+id/dbd_email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="24dp"
					android:layout_marginBottom="24dp"
					android:drawableStart="@drawable/email_24dp"
					android:drawableLeft="@drawable/email_24dp"
					android:drawablePadding="16dp"
					android:hint="@string/email_text"
					android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
				
				<TextView
					android:id="@+id/dbd_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="24dp"
					android:layout_marginBottom="24dp"
					android:drawableStart="@drawable/password_24dp"
					android:drawableLeft="@drawable/password_24dp"
					android:drawablePadding="16dp"
					android:hint="@string/password_text"
					android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
				
				<Button
					android:id="@+id/dbd_logout"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="end"
					android:layout_margin="32dp"
					android:background="@drawable/button_bg"
					android:text="@string/logout_text"
					android:textAllCaps="true"
					android:textAppearance="@style/TextAppearance.AppCompat.Medium"
					android:textColor="@color/colorBlack" />
			
			</LinearLayout>
		</androidx.cardview.widget.CardView>
	</ScrollView>
</LinearLayout>