<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".LoginFragment">
	
	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimary"
		android:elevation="@dimen/appbar_elevation"
		tools:targetApi="lollipop">
		
		<androidx.appcompat.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?attr/colorPrimary"
			android:minHeight="?attr/actionBarSize"
			android:theme="?attr/actionBarTheme">
			
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="16dp"
					android:paddingTop="16dp"
					android:paddingRight="16dp"
					android:paddingBottom="4dp"
					android:text="@string/login_text"
					android:textAppearance="@style/TextAppearance.AppCompat.Large"
					android:textColor="@color/colorWhite"
					android:textStyle="bold" />
				
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="16dp"
					android:paddingRight="16dp"
					android:paddingBottom="16dp"
					android:text="@string/login_sub_text"
					android:textAppearance="@style/TextAppearance.AppCompat.Medium"
					android:textColor="@color/colorWhite" />
			</LinearLayout>
		</androidx.appcompat.widget.Toolbar>
	
	</com.google.android.material.appbar.AppBarLayout>
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<androidx.cardview.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="32dp"
			android:background="@color/colorWhite"
			android:orientation="vertical"
			app:cardCornerRadius="10dp"
			app:cardElevation="8dp">
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="16dp"
				android:orientation="vertical">
				
				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginTop="16dp"
					android:layout_marginBottom="16dp">
					
					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/log_email"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:drawableStart="@drawable/email_24dp"
						android:drawableLeft="@drawable/email_24dp"
						android:drawablePadding="16dp"
						android:hint="@string/email_text"
						android:inputType="textEmailAddress"
						android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
				</com.google.android.material.textfield.TextInputLayout>
				
				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginTop="16dp"
					android:layout_marginBottom="16dp">
					
					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/log_password"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:drawableStart="@drawable/password_24dp"
						android:drawableLeft="@drawable/password_24dp"
						android:drawablePadding="16dp"
						android:hint="@string/password_text"
						android:inputType="textPassword"
						android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
				</com.google.android.material.textfield.TextInputLayout>
				
				<Button
					android:id="@+id/log_login"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginTop="16dp"
					android:layout_marginBottom="16dp"
					android:background="@drawable/button_bg"
					android:text="@string/login_text"
					android:textAllCaps="true"
					android:textAppearance="@style/TextAppearance.AppCompat.Medium"
					android:textColor="@color/colorBlack" />
				
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginBottom="16dp"
					android:gravity="center"
					android:text="@string/log_reg_sub_text"
					android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
				
				<Button
					android:id="@+id/log_register"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginBottom="24dp"
					android:background="@drawable/button_bg"
					android:text="@string/register_text"
					android:textAllCaps="true"
					android:textAppearance="@style/TextAppearance.AppCompat.Medium"
					android:textColor="@color/colorBlack" />
			</LinearLayout>
		</androidx.cardview.widget.CardView>
	</ScrollView>
</LinearLayout>